name:                PyMO-Porter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Seng-Jik/PyMO-Porter#readme
license:             AGPL-3
license-file:        LICENSE
author:              Seng-Jik
maintainer:          xuchao199806@qq.com
copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable PyMO-Porter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.15.1 && < 5, word8, filepath, mtl, bytestring, encoding
  other-modules:       PyMO
                     , PyMO2NScripter
